--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/cs.js": "/js/cs.js",
-    "/css/cs.css": "/css/cs.css"
+    "/css/cs.css": "/css/cs.css",
+    "/js/cs.js": "/js/cs.js"
 }
