manage portfolio create

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
     "/css/manage.css": "/css/manage.css",
     "/css/cs.css": "/css/cs.css",
     "/js/cs.js": "/js/cs.js",
-    "/js/manage.js": "/js/manage.js",
-    "/css/app.css": "/css/app.css"
+    "/js/manage.js": "/js/manage.js"
 }
