--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "jquery-ujs": "^1.2.2"
     }
 }
