--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "jenssegers/date": "^3.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "spatie/laravel-permission": "^3.6"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
