--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
         "jquery-ujs": "^1.2.2",
-        "magnific-popup": "^1.1.0"
+        "magnific-popup": "^1.1.0",
+        "owl.carousel": "^2.3.4"
     }
 }
